<resources>
    <string name="app_name">Personal</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_bottom_nav_title_diary">Diary</string>
    <string name="menu_bottom_nav_title_trash">Trash</string>
    <string name="menu_bottom_nav_title_settings">Settings</string>
    <string name="menu_bottom_nav_title_login">Login</string>
    <string name="menu_bottom_nav_title_register">Register</string>
    <string name="dialog_save_prompt">Saving Diary</string>
    <string name="dialog_title_empty_prompt">Provide a title before saving</string>
    <string name="content_empty_prompt">Provide a content before saving</string>
    <string name="data_insert_success">Data Inserted Successfully</string>
    <string name="data_insert_failed">Data Insert Failed</string>
    <string name="storage_permission_explained">
        Without this permission, the app is unable to read images from device storage.
        \nAre you sure you want to deny this permission?
    </string>
    <string name="photo">Photo</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">Login to account</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="delete_photo_message">Do you want to delete this image ?</string>
    <string name="detail_created_date">Created: %1$s</string>
    <string name="detail_modified_date">Modified: %1$s</string>
    <string name="detail_category">Category: %1$s</string>
    <string name="error_account_exist">email already in use</string>
    <string name="prompt_login_message">hey welcome to Personal A beautiful journal app design to help track your day
    </string>
    <string name="prompt_empty_field">invalid field</string>
    <string name="prompt_password_mismatch">password mismatch</string>
    <string name="prompt_register_message">Hello there, thanks for siginup with us</string>
    <string name="content">Content</string>
    <string name="promp_select_category">Select a Category</string>
    <string name="title">Title</string>
    <string name="title_activity_settings">Settings</string>
    <string name="message_no_content">No Content Available</string>
    <string name="label_forgot_password">forgot password</string>
</resources>
