<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:layout_height="match_parent"
>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/photo"
                android:layout_height="wrap_content" app:srcCompat="@drawable/welcome_logo"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.497" android:layout_marginTop="284dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/label_forgot_password"
                android:layout_width="wrap_content"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:drawableEnd="@drawable/ic_help_outline_black_24dp"
                android:drawablePadding="5dp"
                android:drawableTint="@android:color/white"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content" android:id="@+id/tv_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_password" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/btn_login"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/et_email"
                android:padding="15dp"
                android:textColorHint="@android:color/white"
                android:hint="@string/email"
                app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:padding="15dp"
                android:textColorHint="@android:color/white"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/et_password" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/et_email" app:layout_constraintHorizontal_bias="0.497"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/login"
                android:layout_width="0dp"
                android:padding="15dp"
                android:textAllCaps="false"
                android:backgroundTint="#F24837"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_login" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        <Button
                android:text="@string/register"
                android:layout_width="0dp"
                android:textAllCaps="false"
                android:padding="15dp"
                android:textColor="#F24837"
                android:backgroundTint="@android:color/white"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/btn_register" app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_login" android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>