<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
             android:layout_height="wrap_content">


    <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:background="?attr/nav_iconTint"
            android:padding="15dp"
            android:text="@string/app_name"
            android:textColor="?attr/materialPrimaryDefaultTextColor"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
    <RelativeLayout
            android:id="@+id/body"
            android:layout_below="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:padding="13dp"
                android:background="@drawable/square_edit_text_bg"
                android:id="@+id/ed_title" tools:ignore="Autofill"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:textColor="?attr/materialSecondaryDefaultTextColor"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_below="@id/ed_title"
                android:id="@+id/tv"
                android:text="@string/promp_select_category"/>

        <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_below="@id/tv"
                android:background="@drawable/square_edit_text_bg"
                android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_check_white_24dp"
                app:backgroundTint="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                app:fabSize="mini"
                app:useCompatPadding="true"
                android:layout_below="@id/spinner_category"
                android:layout_height="wrap_content"
                android:id="@+id/fab_save" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:src="@drawable/ic_close_white_24dp"
                app:backgroundTint="@color/colorAccent"
                android:layout_alignParentStart="true"
                app:fabSize="mini"
                android:layout_below="@id/spinner_category"
                android:layout_height="wrap_content"
                app:useCompatPadding="true"
                android:id="@+id/fab_cancel"/>

    </RelativeLayout>




</RelativeLayout>